# voice-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  audit_report.txt  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.jules/: sentinel.md
docs/: architecture.md  plan.md  progress.md
migrations/: env.py
migrations/versions/: f586b9024c60_initial_schema.py
scripts/: healthcheck.py  sync_skills.py
src/: bot.py  config.py  logging_config.py  main.py  states.py  utils.py
src/handlers/: _last.py  _reply.py  admin.py  callbacks.py  modes.py  settings.py  start.py  text.py  voice.py
src/middlewares/: auth.py  db_session.py  rate_limit.py
src/prompts/: humanizer.py  polish.py  prompt_eng.py  summary.py  translator.py
src/services/: audio.py  humanizer.py  llm.py  polish.py  prompt_eng.py  skills_db.py  summary.py  transcribe.py  translator.py
src/storage/: cleanup.py  db.py  history.py  models.py  users.py
src/ui/: design.py  keyboards.py  messages.py
tests/: conftest.py  test_cleanup.py  test_config.py  test_edge_cases.py  test_modes.py  test_prompts.py  test_regenerate.py  test_reply_format.py  test_skills_db.py  test_voice_chunking.py
