[project]
name = "voice-polisher-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Telegram
    "aiogram>=3.10.0",

    # AI
    "groq>=0.13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Search
    "rank-bm25>=0.2.2",

    # Audio
    "pydub>=0.25.1",

    # Config
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",

    # Logs
    "structlog>=24.4.0",

    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "testcontainers[postgres]>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # Allow Cyrillic characters in strings

[tool.ruff.lint.per-file-ignores]
"src/prompts/*.py" = ["E501"]
"migrations/versions/*.py" = ["E501"]
"migrations/env.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --tb=short"
